--- a/scripts/packaging/opencl/ubuntu_20.04/debian/rules
+++ b/scripts/packaging/opencl/ubuntu_20.04/debian/rules
@@ -11,17 +11,20 @@ NEO_ENABLE_i915_PRELIM_DETECTION ?= TRUE
 
 override_dh_auto_configure:
 	dh_auto_configure -- ${NEO_BUILD_EXTRA_OPTS} \
-		-DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} \
+		-DCMAKE_BUILD_TYPE=Release \
 		-DNEO_OCL_VERSION_MAJOR=${NEO_OCL_VERSION_MAJOR} \
 		-DNEO_OCL_VERSION_MINOR=${NEO_OCL_VERSION_MINOR} \
 		-DNEO_VERSION_BUILD=${NEO_OCL_VERSION_BUILD} \
 		-DDO_NOT_RUN_AUB_TESTS=${DO_NOT_RUN_AUB_TESTS} \
-		-DNEO_SKIP_UNIT_TESTS=${NEO_SKIP_UNIT_TESTS} \
+		-DNEO_SKIP_UNIT_TESTS=1 \
 		-DNEO_ENABLE_i915_PRELIM_DETECTION=${NEO_ENABLE_i915_PRELIM_DETECTION} \
 		-DNEO_DISABLE_BUILTINS_COMPILATION=${NEO_DISABLE_BUILTINS_COMPILATION} \
-		-DBUILD_WITH_L0=FALSE \
 		-DRELEASE_WITH_REGKEYS=${RELEASE_WITH_REGKEYS} \
 		-DIGDRCL_FORCE_USE_LIBVA=${IGDRCL_FORCE_USE_LIBVA} \
+		-DNEO_SKIP_OCL_UNIT_TESTS=1 \
+		-DDISABLE_WDDM_LINUX=1 \
+		-DBUILD_WITH_L0=1 \
+		-DNEO_DISABLE_LD_GOLD=1 \
 		-Wno-dev
 
 override_dh_auto_build:
